[project]
name = "planet-in-motion"
version = "0.1.0"
description = "Vedic astrology web app — sidereal birth chart, dasa timeline, gochara, and planetary motion visualisations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pyswisseph>=2.10",
    "plotly>=5.24",
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
